Fix - Manage spacing while latest posts

--- a/sass/_normalize.scss
+++ b/sass/_normalize.scss
@@ -496,7 +496,7 @@ a:focus {
 	outline: 0;
 }
 
-.blog .site-content {
+#main {
 	margin-top: 30px;
 }
 
